[package]
name = "gas_estimator"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = "0.8.4"
log = "0.4.27"
reqwest = "0.12.15"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
serde_with = "3.12.0"
tokio = { version = "1.45.0", features = ["full"] }
tracing-subscriber = "0.3.19"
url = { version = "2", features = ["serde"] }
tower_governor = { version = "0.7", features = ["axum"] }
thiserror = "2.0.12"

